--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.9",
     "bulma": "^1.0.1",
     "bulma-toast": "^2.4.4",
+    "graphql": "^16.11.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
