--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "xian-nextjs",
-  "version": "0.1.0",
+  "name": "pXiel",
+  "version": "1.0.0",
+  "description": "Collaborative pixel art canvas on Xian blockchain",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
